force-app/main/default/objects/VOB__c/VOB__c.object-meta.xml
<CustomObject>
    <description>This object tracks the verification of benefits/Patient Insurance details.</description>
    <label>Insurance</label>
    <nameField>
        <displayFormat>INS-{00000}</displayFormat>
        <label>Insurance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>