force-app/main/default/objects/VOB__c/fields/AA_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>AA_Case_Number__c</fullName>
    <label>Auto Accident Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>