force-app/main/default/objects/VOB__c/fields/Accept_Asignment__c.field-meta.xml
<CustomField>
    <fullName>Accept_Asignment__c</fullName>
    <description>Indicates whether the healthcare provider accepts the assignment of the insurance.</description>
    <label>Accept Asignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>