force-app/main/default/objects/VOB__c/fields/Accept_Bnfts_Send_Payments_To_Patient__c.field-meta.xml
<CustomField>
    <fullName>Accept_Bnfts_Send_Payments_To_Patient__c</fullName>
    <inlineHelpText>Do you accept the assignment of benefits or send payments to the patient?</inlineHelpText>
    <label>Accept benefits or send pmts to patient?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>