force-app/main/default/objects/VOB__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associated the patient with Account.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>VOB</relationshipName>
    <type>Lookup</type>
</CustomField>