force-app/main/default/objects/VOB__c/fields/Acute_Detox_Covered__c.field-meta.xml
<CustomField>
    <fullName>Acute_Detox_Covered__c</fullName>
    <label>Is Acute Detox a covered benefit?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>