force-app/main/default/objects/VOB__c/fields/Address_Same_as_Patient__c.field-meta.xml
<CustomField>
    <fullName>Address_Same_as_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field idicates whether the address associate with the insurance is the same as the patient&apos;s address.</description>
    <label>Address Same as Patient</label>
    <type>Checkbox</type>
</CustomField>