force-app/main/default/objects/VOB__c/fields/Admit_Fee_Copay_for_inpt_or_Detox__c.field-meta.xml
<CustomField>
    <fullName>Admit_Fee_Copay_for_inpt_or_Detox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admit Fee/Copay for inpt or Detox?</label>
    <type>Checkbox</type>
</CustomField>