force-app/main/default/objects/VOB__c/fields/And_why_AA__c.field-meta.xml
<CustomField>
    <fullName>And_why_AA__c</fullName>
    <label>And why:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>