force-app/main/default/objects/VOB__c/fields/AnyOtherInsuranceOnFile__c.field-meta.xml
<CustomField>
    <fullName>AnyOtherInsuranceOnFile__c</fullName>
    <label>Is there another insurance on file(COB)?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>