force-app/main/default/objects/VOB__c/fields/Are_all_lab_codes_covered__c.field-meta.xml
<CustomField>
    <fullName>Are_all_lab_codes_covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are all lab codes covered?</label>
    <type>Checkbox</type>
</CustomField>