force-app/main/default/objects/VOB__c/fields/Are_the_benefits_dx_driven__c.field-meta.xml
<CustomField>
    <fullName>Are_the_benefits_dx_driven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are the benefits dx driven?</label>
    <type>Checkbox</type>
</CustomField>