force-app/main/default/objects/VOB__c/fields/Are_the_labs_the_same_benefits_as_BH__c.field-meta.xml
<CustomField>
    <fullName>Are_the_labs_the_same_benefits_as_BH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are the labs the same benefits as BH?</label>
    <type>Checkbox</type>
</CustomField>