force-app/main/default/objects/VOB__c/fields/Are_there_any_Day_or_Limit_on_UA_s__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_Day_or_Limit_on_UA_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are there any Day or $ Limit on UA&apos;s?</label>
    <type>Checkbox</type>
</CustomField>