force-app/main/default/objects/VOB__c/fields/Assign_to__c.field-meta.xml
<CustomField>
    <fullName>Assign_to__c</fullName>
    <label>Assign to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>