force-app/main/default/objects/VOB__c/fields/Auth_Dept_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Dept_Name__c</fullName>
    <label>Auth Dept Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>