force-app/main/default/objects/VOB__c/fields/Auth_dept_Ref__c.field-meta.xml
<CustomField>
    <fullName>Auth_dept_Ref__c</fullName>
    <label>Auth dept. Ref#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>