force-app/main/default/objects/VOB__c/fields/AuthRequired_Other_Insurance_Resi__c.field-meta.xml
<CustomField>
    <fullName>AuthRequired_Other_Insurance_Resi__c</fullName>
    <label>Auth Required?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>