force-app/main/default/objects/VOB__c/fields/Auto_Accident__c.field-meta.xml
<CustomField>
    <fullName>Auto_Accident__c</fullName>
    <description>Indicates if the case involves an auto accident.</description>
    <label>Auto Accident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>