force-app/main/default/objects/VOB__c/fields/BCBS_Resi__c.field-meta.xml
<CustomField>
    <fullName>BCBS_Resi__c</fullName>
    <label>BCBS Residential (H0011 – Rev code 0128)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>