force-app/main/default/objects/VOB__c/fields/Beh_Health_Rep_Ref__c.field-meta.xml
<CustomField>
    <fullName>Beh_Health_Rep_Ref__c</fullName>
    <label>Beh. Health Rep &amp; Ref#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>