force-app/main/default/objects/VOB__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <description>A code representing the type of benefits provided by the insurance.</description>
    <label>Benefit Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 = Health Benefit Plan Coverage</fullName>
                <default>true</default>
                <label>30 = Health Benefit Plan Coverage</label>
            </value>
            <value>
                <fullName>AI = Substance Abuse</fullName>
            </value>
            <value>
                <fullName>CI = Substance Abuse Facility - Inpatient</fullName>
            </value>
            <value>
                <fullName>CJ = Substance Abuse Facility - Outpatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>