force-app/main/default/objects/VOB__c/fields/Benefit_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type_Code__c</fullName>
    <label>Benefit Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>