force-app/main/default/objects/VOB__c/fields/Calendar_or_Benefit_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_or_Benefit_Year__c</fullName>
    <label>Is that a calendar or benefit year?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>