force-app/main/default/objects/VOB__c/fields/Card_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Issue_Date__c</fullName>
    <description>The date when the insurance card was issued.</description>
    <inlineHelpText>(Note: Required for checking eligibility of CA Medicaid)</inlineHelpText>
    <label>Card Issue Date</label>
    <type>Date</type>
</CustomField>