force-app/main/default/objects/VOB__c/fields/Claim_Representative_Add_AA__c.field-meta.xml
<CustomField>
    <fullName>Claim_Representative_Add_AA__c</fullName>
    <label>Claim Representative Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>