force-app/main/default/objects/VOB__c/fields/Claim_Representative_City_AA__c.field-meta.xml
<CustomField>
    <fullName>Claim_Representative_City_AA__c</fullName>
    <label>Claim Representative City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>