force-app/main/default/objects/VOB__c/fields/ClaimsMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>ClaimsMailingAddress__c</fullName>
    <label>Claims Mailing address:</label>
    <length>250</length>
    <type>Text</type>
</CustomField>