force-app/main/default/objects/VOB__c/fields/Client_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Member_ID__c</fullName>
    <label>Client Member ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>