force-app/main/default/objects/VOB__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <description>The status of the client associate with the insurance, such as prospect client, discharged, referred, termed.</description>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>prospect</fullName>
            </value>
            <value>
                <fullName>client</fullName>
            </value>
            <value>
                <fullName>discharged</fullName>
            </value>
            <value>
                <fullName>referred</fullName>
            </value>
            <value>
                <fullName>termed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>