force-app/main/default/objects/VOB__c/fields/Co_insurance__c.field-meta.xml
<CustomField>
    <fullName>Co_insurance__c</fullName>
    <label>Coinsurance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>