force-app/main/default/objects/VOB__c/fields/Co_Insurance_percent__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurance_percent__c</fullName>
    <description>The percentage of medical costs covered by the insurance after the deductible is met.</description>
    <label>Co-Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>