force-app/main/default/objects/VOB__c/fields/Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance__c</fullName>
    <label>What is the coinsurance?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>