force-app/main/default/objects/VOB__c/fields/Coinsurance_In_Net_IOP__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_In_Net_IOP__c</fullName>
    <label>Coinsurance(In-Net)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>