force-app/main/default/objects/VOB__c/fields/Confinement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Confinement_Fee__c</fullName>
    <label>Confinement Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>