force-app/main/default/objects/VOB__c/fields/Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Accident__c</fullName>
    <description>The date when the insured met with Accident.</description>
    <label>Date of Accident</label>
    <type>Date</type>
</CustomField>