force-app/main/default/objects/VOB__c/fields/Date_Of_Birth1__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth1__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>