force-app/main/default/objects/VOB__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>This field store the Date of birth of Insured.</description>
    <label>Insured DOB</label>
    <type>Date</type>
</CustomField>