force-app/main/default/objects/VOB__c/fields/Day_Limits_In_Net__c.field-meta.xml
<CustomField>
    <fullName>Day_Limits_In_Net__c</fullName>
    <label>Day Limits(In-Net)?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>