force-app/main/default/objects/VOB__c/fields/Day_Limits_Out_Net_IOP__c.field-meta.xml
<CustomField>
    <fullName>Day_Limits_Out_Net_IOP__c</fullName>
    <label>Day Limits(Out-Net)?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>