force-app/main/default/objects/VOB__c/fields/DayOrDollarLimits__c.field-meta.xml
<CustomField>
    <fullName>DayOrDollarLimits__c</fullName>
    <inlineHelpText>Are there any day or dollar limits for any of these levels of care?</inlineHelpText>
    <label>Day or $ limits for any levels of care?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>