force-app/main/default/objects/VOB__c/fields/Days_Limits__c.field-meta.xml
<CustomField>
    <fullName>Days_Limits__c</fullName>
    <label>Days Limits?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>