force-app/main/default/objects/VOB__c/fields/Days_Used__c.field-meta.xml
<CustomField>
    <fullName>Days_Used__c</fullName>
    <label>Days Used?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>