force-app/main/default/objects/VOB__c/fields/Days_Used_In_Net__c.field-meta.xml
<CustomField>
    <fullName>Days_Used_In_Net__c</fullName>
    <label>Days Used(In-Net)?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>