force-app/main/default/objects/VOB__c/fields/Days_Used_Out_Net_OP__c.field-meta.xml
<CustomField>
    <fullName>Days_Used_Out_Net_OP__c</fullName>
    <label>Days Used(Out-Net)?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>