force-app/main/default/objects/VOB__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used when the patient is passed away this field is marked as true</description>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>