force-app/main/default/objects/VOB__c/fields/Deductible_In_Net__c.field-meta.xml
<CustomField>
    <fullName>Deductible_In_Net__c</fullName>
    <label>Deductible(In-Net)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>