force-app/main/default/objects/VOB__c/fields/Deductible_included_in_OOP__c.field-meta.xml
<CustomField>
    <fullName>Deductible_included_in_OOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deductible included in OOP?</label>
    <type>Checkbox</type>
</CustomField>