force-app/main/default/objects/VOB__c/fields/Deductible_met__c.field-meta.xml
<CustomField>
    <fullName>Deductible_met__c</fullName>
    <label>Have they met the Deductible?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>