force-app/main/default/objects/VOB__c/fields/Deductible_Out_Net_OP__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Out_Net_OP__c</fullName>
    <label>Deductible(Out-Net)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>