force-app/main/default/objects/VOB__c/fields/DeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>DeductibleAmount__c</fullName>
    <label>What is the Deductible?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>