force-app/main/default/objects/VOB__c/fields/DepartmentAndPhoneToCallforAuth__c.field-meta.xml
<CustomField>
    <fullName>DepartmentAndPhoneToCallforAuth__c</fullName>
    <inlineHelpText>What department and phone number do we call for an authorization?</inlineHelpText>
    <label>Department and ph# to call for an auth?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>