force-app/main/default/objects/VOB__c/fields/Detox__c.field-meta.xml
<CustomField>
    <fullName>Detox__c</fullName>
    <label>Detox</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>