force-app/main/default/objects/VOB__c/fields/Do_they_need_to_update_it__c.field-meta.xml
<CustomField>
    <fullName>Do_they_need_to_update_it__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they need to update it?</label>
    <type>Checkbox</type>
</CustomField>