force-app/main/default/objects/VOB__c/fields/Does_it_require_an_auth__c.field-meta.xml
<CustomField>
    <fullName>Does_it_require_an_auth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covered/Requires Auth?</label>
    <type>Checkbox</type>
</CustomField>