force-app/main/default/objects/VOB__c/fields/Does_the_OOP_apply_for_OON__c.field-meta.xml
<CustomField>
    <fullName>Does_the_OOP_apply_for_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the OOP apply for OON?</label>
    <type>Checkbox</type>
</CustomField>