force-app/main/default/objects/VOB__c/fields/Dollar_Limits__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Limits__c</fullName>
    <label>Dollar Limits?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>