force-app/main/default/objects/VOB__c/fields/Doller_Limits_In_Net_IOP__c.field-meta.xml
<CustomField>
    <fullName>Doller_Limits_In_Net_IOP__c</fullName>
    <label>Dollar Limits(In-Net)?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>