force-app/main/default/objects/VOB__c/fields/Doller_Limits_Out_Net_OP__c.field-meta.xml
<CustomField>
    <fullName>Doller_Limits_Out_Net_OP__c</fullName>
    <label>Dollar Limits(Out-Net)?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>