force-app/main/default/objects/VOB__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>The date when the insurance coverage Starts.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>