force-app/main/default/objects/VOB__c/fields/Effective_From_PreAuth__c.field-meta.xml
<CustomField>
    <fullName>Effective_From_PreAuth__c</fullName>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>